Fixing a layout issue

--- a/GeminiSheet.css
+++ b/GeminiSheet.css
@@ -511,3 +511,14 @@ button:active {
 .sheet-tabstoggle[value="equipmentunluck"] ~ div.sheet-equipmentunluck {
   display: inline;
 }
+
+/* Whisps */
+
+.container {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  position: relative;
+  margin: 0 0 0 -15px;
+  z-index: 1;
+}
